<resources>
    <string name="app_name">FitLife</string>

    <!--profile information-->
    <string name="userName">Username</string>
    <string name="firstName">First</string>
    <string name="lastName">Last</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>

    <string name="submit">Submit</string>

    <string name="exerciseLog">Log Exercise</string>
    <string name="exercise">Exercise</string>
    <string name="weight">Weight (lbs)</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>

    <string name="cardio">Cardio</string>
    <string name="cardioName">Name</string>
    <string name="time">Time (min)</string>

    <string name="Nutrition">Nutrition</string>
    <string name="Calories">Calories</string>
    <string name="Protein">Protein (g)</string>
    <string name="Fats">Fats (g)</string>
    <string name="Carbohydrates">Carbohydrates (g)</string>


    <string name="login">Log in</string>
    <string name="signup">Sign up</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="logExercise">Log Exercise</string>
    <string name="logNutrition">Log Nutrition</string>

    <string name="cancel">Cancel</string>

    <string-array name="exercises_array">
        <item>Flat BB Bench Press</item>
        <item>Flat DB Bench Press</item>
        <item>Incline BB Bench Press</item>
        <item>Incline DB Bench Press</item>
        <item>Decline BB Bench Press</item>
        <item>Decline DB Bench Press</item>
        <item>Chest Dips</item>
        <item>Triceps Dips</item>
        <item>Push Ups</item>
        <item>Flat DB Flyes</item>
        <item>Incline DB Flyes</item>
        <item>Decline DB Flyes</item>
        <item>Pec Deck Machine</item>
        <item>Cable Flyes</item>
        <item>Dumbbell Pullover</item>
        <item>Pull Ups</item>
        <item>Chin Ups</item>
        <item>Lat Pull-Down</item>
        <item>Bent Over BB Row</item>
        <item>Bent Over DB Row</item>
        <item>T-Bar Row</item>
        <item>Seated Cable Row</item>
        <item>Barbell Shrugs</item>
        <item>Dumbbell Shrugs</item>
        <item>Trap Bar Shrugs</item>
        <item>Seated OH BB Press</item>
        <item>Seated OH DB Press</item>
        <item>Standing OH BB Press</item>
        <item>Standing OH DB Press</item>
        <item>Arnold Press</item>
        <item>Barbell Upright Row</item>
        <item>Dumbbell Upright Row</item>
        <item>Dumbbell Lateral Raises</item>
        <item>Cable Lateral Raises</item>
        <item>Dumbbell Front Raises</item>
        <item>Cable Front Raises</item>
        <item>Barbell Rear Delt Row</item>
        <item>Dumbbell Rear Delt Row</item>
        <item>Rope Face Pull</item>
        <item>Dumbbell Squat</item>
        <item>Goblet Squat</item>
        <item>Barbell Hip Thrust</item>
        <item>Low Bar Barbell Squat</item>
        <item>High Bar Barbell Squat</item>
        <item>Barbell Front Squat</item>
        <item>Barbell Split Squat</item>
        <item>Dumbbell Split Squat</item>
        <item>Barbell Lunges</item>
        <item>Dumbbell Lunges</item>
        <item>Barbell Step-Ups</item>
        <item>Dumbbell Step-ups</item>
        <item>Leg Press</item>
        <item>Single Leg Press</item>
        <item>Hack Squat</item>
        <item>Leg Extension</item>
        <item>BB Conventional Deadlift</item>
        <item>DB Conventional Deadlift</item>
        <item>BB Romanian Deadlift</item>
        <item>DB Romanian Deadlift</item>
        <item>BB Sumo Deadlift</item>
        <item>DB Sumo Deadlift</item>
        <item>Glute-Ham Raises</item>
        <item>Hyperextensions</item>
        <item>Good Mornings</item>
        <item>Leg Curl</item>
        <item>Standing BB Curl</item>
        <item>E-Z Bar Curl</item>
        <item>Standing DB Biceps Curl</item>
        <item>Seated DB Biceps Curl</item>
        <item>DB Concentration Curl</item>
        <item>Standing DB Hammer Curl</item>
        <item>Seated DB Hammer Curl</item>
        <item>Cable Curl</item>
        <item>Biceps Curl Machine</item>
        <item>Close Grip Push Ups</item>
        <item>E-Z Bar Skull Crushers</item>
        <item>Dumbbell OH Extension</item>
        <item>Bench Dips</item>
        <item>Rope Push-Down</item>
        <item>Cable Pull-Throughs</item>
        <item>Rope Overhead Extension</item>
    </string-array>

    <string-array name="cardio_array">
        <item>Walking</item>
        <item>Elliptical</item>
        <item>Sprinting</item>
        <item>Jogging</item>
        <item>Jumping Rope</item>
        <item>Swimming</item>
        <item>Cross Country Skiing</item>
        <item>Biking</item>
        <item>Squash</item>
        <item>Soccer</item>
        <item>Rugby</item>
        <item>Football</item>
        <item>Basketball</item>
        <item>Badminton</item>
        <item>Tennis</item>
        <item>Table Tennis</item>
        <item>Rock Climbing</item>
        <item>Kayaking</item>
        <item>Volleyball</item>
        <item>Beach Volleyball</item>
        <item>Baseball</item>
        <item>Judo</item>
        <item>Gymnastics</item>
        <item>Ice Skating</item>
        <item>Figure Skating</item>
        <item>Karate</item>
        <item>Cheerleading</item>
        <item>Skateboarding</item>
        <item>Dodgeball</item>
        <item>Snowboarding</item>
        <item>Airsoft</item>
        <item>Horse Racing</item>
        <item>Ultimate Frisbee</item>
        <item>Paintball</item>
        <item>Trampolining</item>
        <item>Handball</item>
        <item>Laser Tag</item>
        <item>Curling</item>
        <item>Speed Skiing</item>
        <item>Parkour</item>
        <item>CrossFit</item>
        <item>Ice Hockey</item>
        <item>Field Hockey</item>
        <item>Lacrosse</item>
        <item>Fencing</item>
        <item>Surfing</item>
        <item>Taekwondo</item>
        <item>Water Polo</item>
        <item>Wrestling</item>
        <item>Diving</item>
        <item>Cricket</item>
        <item>Softball</item>
        <item>Rowing</item>
        <item>Boxing</item>
        <item>Kickboxing</item>
        <item>Muay Thai</item>
        <item>Brazilian Jiu-jitsu</item>
        <item>Dancing</item>
        <item>Hiking</item>
        <item>Box Squat Jump</item>
        <item>Shadowboxing</item>
        <item>Mountain Climbers</item>
        <item>Burpees</item>
        <item>Jumping Jacks</item>
        <item>Tuck Jumps</item>
        <item>Step Ups</item>
        <item>High Knees</item>
        <item>Butt Kicks</item>
    </string-array>

</resources>
