<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PopupCalendar"
    android:padding="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/colorMedium1">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/datePopup"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Date Goes Here"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="center"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/exerciseLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/ExerciseTitle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:text="Exercise"
                    android:textAlignment="center"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/cardioLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cardioTitle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:text="Cardio"
                    android:textAlignment="center"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nutritionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nutritionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:text="Nutrition"
                    android:textAlignment="center"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logExercise"
                android:background="@drawable/buttonshape"
                android:textColor="@color/white"
                android:text="@string/logExercise"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logNutrition"
                android:background="@drawable/buttonshape"
                android:text="@string/logNutrition"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:background="@drawable/buttonshape"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>